// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateSelect DateSelect date 1`] = `
<DocumentFragment>
  <div
    class="za-date-select"
  >
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        2019年4月23日
      </div>
    </div>
    <i
      class="za-icon za-date-select__arrow"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1000 1000"
        width="1em"
      >
        <path
          d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
          fill-rule="evenodd"
        />
      </svg>
    </i>
  </div>
</DocumentFragment>
`;

exports[`DateSelect DateSelect datetime 1`] = `
<DocumentFragment>
  <div
    class="za-date-select"
  >
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        2017年11月2日9时0分0秒
      </div>
    </div>
    <i
      class="za-icon za-date-select__arrow"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1000 1000"
        width="1em"
      >
        <path
          d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
          fill-rule="evenodd"
        />
      </svg>
    </i>
  </div>
</DocumentFragment>
`;

exports[`DateSelect DateSelect disabled 1`] = `
<DocumentFragment>
  <div
    class="za-date-select za-date-select--disabled"
  >
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        2019年4月23日
      </div>
    </div>
    <i
      class="za-icon za-date-select__arrow"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1000 1000"
        width="1em"
      >
        <path
          d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
          fill-rule="evenodd"
        />
      </svg>
    </i>
  </div>
</DocumentFragment>
`;

exports[`DateSelect DateSelect time 1`] = `
<DocumentFragment>
  <div
    class="za-date-select"
  >
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        7时0分0秒
      </div>
    </div>
    <i
      class="za-icon za-date-select__arrow"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1000 1000"
        width="1em"
      >
        <path
          d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
          fill-rule="evenodd"
        />
      </svg>
    </i>
  </div>
</DocumentFragment>
`;

exports[`DateSelect DateSelect trigger visible 1`] = `
<DocumentFragment>
  <div
    class="za-date-select za-date-select--placeholder"
  >
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        请选择
      </div>
    </div>
    <i
      class="za-icon za-date-select__arrow"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1000 1000"
        width="1em"
      >
        <path
          d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
          fill-rule="evenodd"
        />
      </svg>
    </i>
  </div>
</DocumentFragment>
`;

exports[`DateSelect DateSelect year 1`] = `
<DocumentFragment>
  <div
    class="za-date-select"
  >
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        2019年
      </div>
    </div>
    <i
      class="za-icon za-date-select__arrow"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1000 1000"
        width="1em"
      >
        <path
          d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
          fill-rule="evenodd"
        />
      </svg>
    </i>
  </div>
</DocumentFragment>
`;
